--- a/src/about.html
+++ b/src/about.html
@@ -11,9 +11,17 @@
   <use xlink:href="#bootstrap"></use></svg> <span class="fs-4">Tanzania Safari Tours</span> </a> 
   
   <ul class="nav nav-pills"> 
-  <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li> 
-  <li class="nav-item">  <a href="#" class="nav-link">Index</a></li> 
-  <li class="nav-item">  <a href="#" class="nav-link">About</a></li> </ul> </header>
+  <li class="nav-item"><a href="index.html" class="nav-link">Index</a></li> 
+  <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">About</a></li>  </ul> </header>
+  <div>
+  Sebastian Foreman your tour guide!
+  </div>
+  
+  
+  
+  
+  
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
 </html>
