--- a/src/details.html
+++ b/src/details.html
@@ -11,9 +11,8 @@
   <use xlink:href="#bootstrap"></use></svg> <span class="fs-4">Tanzania Safari Tours</span> </a> 
   
   <ul class="nav nav-pills"> 
-  <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li> 
-  <li class="nav-item">  <a href="#" class="nav-link">Index</a></li> 
-  <li class="nav-item">  <a href="#" class="nav-link">About</a></li> </ul> </header>
+  <li class="nav-item">  <a href="index.html" class="nav-link">Index</a></li> 
+  <li class="nav-item">  <a href="about.html" class="nav-link">About</a></li> </ul> </header>
   <div>
   <h1>African Elephant  </h1>
   <img src="./images/elephant.jpg" />
