Index page and detail navigation

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,39 @@
   <ul class="nav nav-pills"> 
   <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Index</a></li>  
   <li class="nav-item">  <a href="about.html" class="nav-link">About</a></li> </ul> </header>
-  
-  
+ 
+ <div> Click on an Animal name to learn more!
+ </div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col">
+       <img src="./images/elephant.jpg" width="320" height="240" />
+	   <div><a href= "details.html"><button type="button" class="btn btn-success">Elephant</button></a></div>
+    </div>
+    <div class="col">
+       <img src="./images/giraffes.jpg" width="320" height="240"/>
+	   <div><a href= "details.html"><button type="button" class="btn btn-success">Giraffe</button></a></div>
+    </div>
+    <div class="col">
+      <img src="./images/gazelle.png" width="320" height="240"/>
+	  <div><a href= "details.html"><button type="button" class="btn btn-success">Gazelle</button></a></div>
+    </div> 
+    <div class="col">
+      <img src="./images/hippo.jpg" width="320" height="240"/>
+	  <div><a href= "details.html"><button type="button" class="btn btn-success">Hippo</button></a></div>
+    </div>
+    <div class="col">
+      <img src="./images/Rhino.jpg" width="320" height="240"/>
+	  <div><a href= "details.html"><button type="button" class="btn btn-success">Rhino</button></a></div>
+    </div>
+    <div class="col">
+      <img src="./images/lion.jpg" width="320" height="240"/>
+	  <div><a href= "details.html"><button type="button" class="btn btn-success">Lion</button></a></div>
+    </div>
+  </div>
+</div>
+
+
   
   
   
