--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,17 @@
   <body>
   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg class="bi me-2" width="40" height="32" aria-hidden="true">
   <use xlink:href="#bootstrap"></use></svg> <span class="fs-4">Tanzania Safari Tours</span> </a> 
-  
+  <style>
+  .btn {margin: 10px 0 10px 0;}
+  .active {background-color:green;}
+  </style>
   <ul class="nav nav-pills"> 
-  <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Index</a></li>  
+  <li class="nav-item"><a href="#" class="nav-link active">Index</a></li>  
   <li class="nav-item">  <a href="about.html" class="nav-link">About</a></li> </ul> </header>
  
- <div> Click on an Animal name to learn more!
+ <div id="centered" style="margin: 30px auto; width:75%;"> On our safari tours you are guaranteed to see a number of fascinating animals.
+ Come and see them before its too late! 
+ Click on an Animal name to learn more!
  </div>
 <div class="container text-center">
   <div class="row">
