About page and nav menu fix

--- a/src/about.html
+++ b/src/about.html
@@ -10,13 +10,20 @@
   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg class="bi me-2" width="40" height="32" aria-hidden="true">
   <use xlink:href="#bootstrap"></use></svg> <span class="fs-4">Tanzania Safari Tours</span> </a> 
   
-  <ul class="nav nav-pills"> 
+  <ul class="nav nav-pills" style="margin: 0 10px 0 0;"> 
   <li class="nav-item"><a href="index.html" class="nav-link">Index</a></li> 
-  <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">About</a></li>  </ul> </header>
-  <div>
-  Sebastian Foreman your tour guide!
-  </div>
+  <li class="nav-item"><a href="details.html" class="nav-link">Spotlight</a></li>
+  <li class="nav-item"><a href="about.html" class="nav-link active" aria-current="page">About</a></li>  </ul> </header>
+  <div id="centered" style="margin: 30px auto; width:75%;">
+	<img src="./images/Safari+guide.jpg" />
+	<div style="margin: 20px 0; width: 800px;">
   
+  Our wonderful tour guides! From the left: Jimmy (Jimbo) Driveroni, Shane (Speedy) Dawntails, and Michael (Sample) Bakers. 
+  These fine gentlemen have and incredible record of keeping tourists and wildlife safe at the same time! They have had no 
+  incidents this year but last year Michael earned his nickname when a Cheetah bit a part of his behind before 
+  he ran away to safety. <i>(I do not own this image nor are they the people described in this about page. They just seemed like cool guys.)</i>
+	</div>
+  </div>
   
   
   
