--- a/src/details.html
+++ b/src/details.html
@@ -10,9 +10,10 @@
   <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg class="bi me-2" width="40" height="32" aria-hidden="true">
   <use xlink:href="#bootstrap"></use></svg> <span class="fs-4">Tanzania Safari Tours</span> </a> 
   
-  <ul class="nav nav-pills"> 
-  <li class="nav-item">  <a href="index.html" class="nav-link">Index</a></li> 
-  <li class="nav-item">  <a href="about.html" class="nav-link">About</a></li> </ul> </header>
+  <ul class="nav nav-pills" style="margin: 0 10px 0 0;"> 
+  <li class="nav-item"><a href="index.html" class="nav-link">Index</a></li> 
+  <li class="nav-item"><a href="details.html" class="nav-link active">Spotlight</a></li>
+  <li class="nav-item"><a href="about.html" class="nav-link">About</a></li> </ul> </header>
   <div id="centered" style="margin: 30px auto; width:75%;">
   <h1 >African Elephant  </h1>
   <img src="./images/elephant.jpg" />
