--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
   <use xlink:href="#bootstrap"></use></svg> <span class="fs-4">Tanzania Safari Tours</span> </a> 
   <style>
   .btn {margin: 10px 0 10px 0;}
-  .active {background-color:green;}
   </style>
-  <ul class="nav nav-pills"> 
-  <li class="nav-item"><a href="#" class="nav-link active">Index</a></li>  
-  <li class="nav-item">  <a href="about.html" class="nav-link">About</a></li> </ul> </header>
+  <ul class="nav nav-pills"style="margin: 0 10px 0 0;"> 
+  <li class="nav-item"><a href="index.html" class="nav-link active">Index</a></li>  
+  <li class="nav-item"><a href="details.html" class="nav-link">Spotlight</a></li>
+  <li class="nav-item"><a href="about.html" class="nav-link">About</a></li> </ul> </header>
  
  <div id="centered" style="margin: 30px auto; width:75%;"> On our safari tours you are guaranteed to see a number of fascinating animals.
  Come and see them before its too late! 
