--- a/src/about.html
+++ b/src/about.html
@@ -6,8 +6,10 @@
     <title>Tanzania Safari Tours</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
-  <body>
-  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+  <body style="background-image: url('./images/Safari+Grass.jpg');">
+  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom" style="background-color:BurlyWood;"> 
+  <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> 
+  <svg class="bi me-2" width="40" height="32" aria-hidden="true">
   <use xlink:href="#bootstrap"></use></svg> <span class="fs-4">Tanzania Safari Tours</span> </a> 
   
   <ul class="nav nav-pills" style="margin: 0 10px 0 0;"> 
@@ -20,7 +22,7 @@
   
   Our wonderful tour guides! From the left: Jimmy (Jimbo) Driveroni, Shane (Speedy) Dawntails, and Michael (Sample) Bakers. 
   These fine gentlemen have and incredible record of keeping tourists and wildlife safe at the same time! They have had no 
-  incidents this year but last year Michael earned his nickname when a Cheetah bit a part of his behind before 
+  incidents this year but last year Michael earned his nickname when a Lion bit a part of his behind before 
   he ran away to safety. <i>(I do not own this image nor are they the people described in this about page. They just seemed like cool guys.)</i>
 	</div>
   </div>
