--- a/src/details.html
+++ b/src/details.html
@@ -6,8 +6,10 @@
     <title>Tanzania Safari Tours</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   </head>
-  <body>
-  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"> <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"> <svg class="bi me-2" width="40" height="32" aria-hidden="true">
+  <body style="background-image: url('./images/Safari+Grass.jpg');">
+  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom" style="background-color:BurlyWood;"> 
+  <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+  <svg class="bi me-2" width="40" height="32" aria-hidden="true">
   <use xlink:href="#bootstrap"></use></svg> <span class="fs-4">Tanzania Safari Tours</span> </a> 
   
   <ul class="nav nav-pills" style="margin: 0 10px 0 0;"> 
